k8s/deployment.example.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-api
  namespace: my-app
spec:
  selector:
    matchLabels:
      app: my-app-api
  template:
    metadata:
      labels:
        app: my-app-api
    spec:
      containers:
        - name: my-app-api
          image: lombardi/go-gin-template:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-api-svc
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-api-https-ingress
  namespace: my-app

  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
    - host: api.patos.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-app-api-svc
                port:
                  number: 80
  tls:
    - hosts:
        - api.patos.dev
      secretName: my-app-api-tls

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-app-api-http-ingress-redirect
  namespace: my-app

  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.patos.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
